part4/4.01.ReadinessProbe/ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: pp-lo
  labels:
    name: pp-lo
