part4/4.01.ReadinessProbe/ping-pong_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-deploy
  namespace: pp-lo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-deploy
  template:
    metadata:
      labels:
        app: ping-pong-deploy
    spec:
      containers:
        - name: ping-pong
          image: k3d-myregistry.localhost:12345/pingpong
          readinessProbe:
            initialDelaySeconds: 5 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /health
               port: 8080
