part4/4.01.ReadinessProbe/log-output_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
  namespace: pp-lo
  labels:
    name: log-output-service
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8090
